# orbit-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
orbit/: cli.py  config.py
orbit/agent/: ask.py  budget.py  executor.py  loop.py  observer.py  planner.py  wtf.py
orbit/context/: docker_ctx.py  filesystem_ctx.py  git_ctx.py  k8s_ctx.py  scanner.py  system_ctx.py
orbit/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py
orbit/memory/: history.py  rag.py  runbooks.py
orbit/modules/: base.py  docker_mod.py  filesystem_mod.py  git_mod.py  k8s_mod.py  registry.py  shell.py
orbit/router/: context_budget.py  decomposer.py  model_registry.py  model_selector.py
orbit/safety/: classifier.py  patterns.py  rollback.py
orbit/schemas/: __init__.py  analysis.py  context.py  execution.py  plan.py  runbook.py  safety.py
orbit/ui/: animation.py  confirmations.py  console.py  panels.py  themes.py
tests/: conftest.py  test_cli.py  test_config.py  test_llm.py  test_schemas.py
tests/test_agent/: test_budget.py  test_executor_bench.py  test_modules.py  test_observer.py  test_observer_bench.py  test_planner_bench.py
tests/test_context/: test_benchmarks.py  test_collectors.py  test_context_budget.py  test_scanner.py
tests/test_memory/: test_history.py  test_rag.py  test_runbooks.py
tests/test_router/: test_decomposer_bench.py  test_model_registry.py  test_model_selector.py
tests/test_safety/: test_classifier.py  test_classifier_benchmarks.py  test_rollback.py
